--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 html, body {
-  margin: 0;
-  padding: 0;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin-top: 50px;
 }
 
 canvas {
-  display: block;
+  
 }
